# Sturm

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  Rakefile
.github/workflows/: check_release_version.yml  run_cmake_inclusion_tests.yml  run_cpp_tests.yml
cmake/: Config.cmake.in  FindOptimist.cmake  SturmCatch2.cmake  SturmConfig.cmake.in  SturmEigen3.cmake  SturmOptimist.cmake  SturmVersion.cmake
cmake/test_cmake_inclusion/: CMakeLists.txt  test.cpp
core/include/: Sturm.hh
core/include/Sturm/: Poly.hh  Sequence.hh
core/tests/: CMakeLists.txt  test_divide.cc  test_gcd.cc  test_poly.cc  test_root.cc  test_sequence.cc
docs/: _mainpage_8md.html  _poly_8hh.html  _poly_8hh.js  _poly_8hh__dep__incl.map  _poly_8hh__dep__incl.md5  _poly_8hh__incl.map  _poly_8hh__incl.md5  _poly_8hh_source.html  _poly_8hxx.html  _poly_8hxx.js  _poly_8hxx__dep__incl.map  _poly_8hxx__dep__incl.md5  _poly_8hxx_source.html  _sequence_8hh.html  _sequence_8hh.js  _sequence_8hh__incl.map  _sequence_8hh__incl.md5  _sequence_8hh_source.html  _sequence_8hxx.html  _sequence_8hxx.js  _sequence_8hxx__dep__incl.map  _sequence_8hxx__dep__incl.md5  _sequence_8hxx_source.html  _sturm_8hh.html  _sturm_8hh.js  _sturm_8hh__dep__incl.map  _sturm_8hh__dep__incl.md5  _sturm_8hh__incl.map  _sturm_8hh__incl.md5  _sturm_8hh_source.html  _sturm_8hxx.html  _sturm_8hxx.js  _sturm_8hxx__dep__incl.map  _sturm_8hxx__dep__incl.md5  _sturm_8hxx_source.html  annotated.html  annotated_dup.js  class_sturm_1_1_poly-members.html  class_sturm_1_1_poly.html  class_sturm_1_1_poly.js  (+53 more)
docs/include/doxygen-custom/: header.html
docs/markdown/: Mainpage.md
docs/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  namespaces_0.js  pages_0.js  (+7 more)
include/: Sturm.hh
include/Sturm/: Poly.hh  Poly.hxx  Sequence.hh  Sequence.hxx
src/: Poly.cxx  Sequence.cxx
tests/: CMakeLists.txt  test_divide.cc  test_gcd.cc  test_poly.cc  test_root.cc  test_sequence.cc
tests/Divide/: test_divide.cc
tests/GCD/: test_gcd.cc
tests/Poly/: test_poly.cc
tests/Root/: test_root.cc
